[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "htmf"
authors = [{ name = "jkmnt" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/jkmnt/htmf"

[tool.flit.sdist]
exclude = ["doc/", "tests/", "soups.png"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "FBT",
    "C4",
    "LOG",
    "RET",
    "RET502",
    "INT",
    "RUF",
]
